# liblettercase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project-idea.md
benchmark/: CMakeLists.txt  main.cpp
data/benchmarks/: 2018-07-20-bench-1.3.0-dirty.json  2018-07-20-old-best-bench-1.1.0-21-gdc6c868-dirty.json  best-bench-1.2.0-dirty.json
hooks/: README.md  autohook.sh  autohook_setup.sh
hooks/prepare-commit-msg/: 01-run-benchmark
hooks/scripts/: run-benchmark.sh  run-tests.sh
include/liblettercase/: ExceptionWords.h  helper_functions.h  lettercase_conversions.h
scripts/: compare_bench.py
src/: CMakeLists.txt  main.cpp
src/liblettercase/: ExceptionWords.cpp  helper_functions.cpp  lettercase_conversions.cpp
test/: CMakeLists.txt  main.cpp  test_conversions.cpp  test_helper_functions.cpp
